--- a/padrao-esplee/padrao-esplee.css
+++ b/padrao-esplee/padrao-esplee.css
@@ -163,8 +163,7 @@ header{
     .navbar-icon{
         display: flex;
         justify-content: flex-end;
-        padding-right: 32px;
-    }
+        padding-right: 32px;}
 .background{
     z-index: 10;
     display: none;
@@ -176,7 +175,6 @@ header{
     height: 100%;
     background-color: var(--dark0-color);
     opacity: 0.5;}
-
 .links{
     display: flex;
     flex-direction: column;
