--- a/pags/secundarias/projetos/projetos.css
+++ b/pags/secundarias/projetos/projetos.css
@@ -1,11 +1,12 @@
 main{
     margin: auto;
+    margin-bottom: 48px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
 
-    padding: 20px 48px;
+    padding: 20px 32px;
 }
     .card{
         display: flex;
