--- a/pags/index/css/mobile.css
+++ b/pags/index/css/mobile.css
@@ -156,7 +156,18 @@ section div.tag h2{
     color: var(--light1-color);
 }
 #pt6 h2, #pt7 h2{
-    font-size: 2.369em;
+    font-size: 1.777em;
     font-weight: 500;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.6em;
+    text-align: center;
 }
+footer{
+    background-color: var(--dark0-color);
+    color: var(--light1-color);
+}
+    .icon-footer{
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        border: 1px solid var(--light1-color);
+    } 
