--- a/css/mobile.css
+++ b/css/mobile.css
@@ -52,7 +52,7 @@ section div.tag h2{
         }
             .item .num{
                 color: var(--green0-color);
-                font-family: 'espleetype', sans-serif;
+                font-family: 'esplee-font', sans-serif;
                 font-size: 4.4em;
                 margin-bottom: 0em;
                 line-height: 0.95em;
@@ -151,16 +151,19 @@ section div.tag h2{
     border-bottom: 32px solid var(--dark0-color);
 }
 
-#pt6, #pt7{
+#pt6{
     background-color: var(--dark0-color);
     color: var(--light1-color);
 }
-#pt6 h2, #pt7 h2{
-    font-size: 1.777em;
-    font-weight: 500;
-    margin-bottom: 0.6em;
-    text-align: center;
-}
+    #pt6 div.content{
+        width: 100%;
+    }
+    #pt6 h2{
+        font-size: 1.777em;
+        font-weight: 500;
+        margin-bottom: 0.6em;
+        text-align: center;
+    }
 footer{
     background-color: var(--dark0-color);
     color: var(--light1-color);
