--- a/assets/padrao-esplee/padrao-esplee.css
+++ b/assets/padrao-esplee/padrao-esplee.css
@@ -104,7 +104,7 @@ button{
 
 /*CONFIGURAÇÃO DO HEADER*/
 header{
-    background-image: url(imagens/background/bg-main-g.jpg);
+    background-image: url();
     background-color: var(--dark0-color);
     background-position: center center;
     background-size: cover;
@@ -191,7 +191,9 @@ header{
 section{
     display: flex;
     flex-direction: column;
-    position: relative;}
+    position: relative;
+    background-position: center center;
+    background-size: cover;}
     section div.content{
         max-width: 1400px;
         padding: 0px 32px;
