--- a/css/mobile.css
+++ b/css/mobile.css
@@ -103,7 +103,7 @@ section div.tag h2{
                     #pt2 img{
                         width: 48px;
                         background-color: var(--green-1-color);
-                        box-shadow: -4px 4px var(--dark0-color);
+                        box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.25);
                         padding: 12px 4px;
                         border-radius: 4px;
                     }
@@ -183,9 +183,3 @@ footer{
     background-color: var(--dark0-color);
     color: var(--light1-color);
 }
-    .icon-footer{
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        border: 1px solid var(--light1-color);
-    }
