--- a/assets/padrao-esplee/padrao-esplee.css
+++ b/assets/padrao-esplee/padrao-esplee.css
@@ -72,6 +72,7 @@ button{
     transition: .15s;
 
     width: 100%;
+    margin: auto;
     padding: 16px 32px;
     border-radius: 3px;
     border: none;
