--- a/css/desktop.css
+++ b/css/desktop.css
@@ -18,6 +18,10 @@ header{
 header h1, #pt5 h1{
     font-size: 5.6em;
 }
+section div.content{
+    max-width: 1400px;
+    padding: 80px 32px;
+    margin: 76px auto;}
 #pt1 .content{
     flex-direction: row;
     width:1200px;
@@ -28,15 +32,19 @@ header h1, #pt5 h1{
     #pt1 .right{
         width: 50%;
     }
+        #pt1 .item p {
+            width: 60%;
+        }
     #pt1 .left{
         width: 50%;
     }
-    section div.content{
-        max-width: 1400px;
-        padding: 80px 32px;
-        margin: 76px auto;}
 
 #pt3 .item p{
     top: 18%;
     left: 20%;
+}
+@media screen and (min-width: 1500px) {
+    #pt1 .content{
+        width: 1400px;
+    }
 }
