--- a/css/tablet.css
+++ b/css/tablet.css
@@ -18,6 +18,7 @@ header{
 .right .item{
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
     .item p{
         width: 70%;
@@ -27,6 +28,11 @@ header{
     top: 17%;
     left: 25%;
 }
+
+/*MARGENS*/
+#pt2 .content, #pt3 .content, #pt4 .content{
+    margin-top: 120px;
+}
 /*TRIANGULOS*/
 #pt2 .bottom{
     border-top: 50px solid var(--dark0-color);
@@ -35,19 +41,24 @@ header{
     border-top: 50px solid var(--red0-color);
 }
 @media screen and (min-width:800px){
-    .content, .accordions{
-        margin: auto;
-        width: 660px;
-    }
-    #pt2 .content {
+    .content {
         width: 80%;
-    }
-    #pt2 .case {
-        height: 40vw;
     }
     .align {
         text-align: center;
         margin: auto;
         width: 800px;
+    }
+    #pt2 .case {
+        height: 40vw;
+    }
+    .accordions{
+        margin: auto;
+        width: 660px;
+    }
+}
+@media screen and (min-width:1000px) {
+    .aux{
+        width: 788px;
     }
 }
