--- a/pags/contato/css/mobile.css
+++ b/pags/contato/css/mobile.css
@@ -67,6 +67,10 @@ header{
             width: 48px;
         }
 
+.aux{
+    position: relative;
+    width: 100%;
+}
 main{
     display: flex;
     flex-direction: row;
